resources/assets/sass/front/pages/_courses.scss
.course-detailed {
  font-family: $body_text;
  margin-top: 50px;
  padding-bottom: 50px;
  border-bottom: 1px solid $grey_text;

  h1.course-name {
    color: $primary_blue;
    font-size: 150%;
    text-align: left;
    margin-top: 0;
  }

  .course-detail-name {
    color: $primary_orange;
    text-transform: uppercase;
  }

  .course-info {
    color: $grey_text;
    font-weight: 300;

    ul {
      list-style-image: url(../../images/isomark_bullet.png);
    }
  }
}

.course-icons-container {
  max-width: 800px;
  margin: 0 auto;
  .course-icon-row>div {
    padding: 50px 1em;
    position: relative;
  }
  .course-icon-box {
    width: 100%;
    max-width: 350px;
    height: 350px;
    display: inline-block;
    border: 1px solid $grey_text;
    text-align: center;
    padding-top: 50px;

    &:hover {
      border-color: $primary_orange;

      svg * {
        stroke: $primary_orange;
      }
    }

    svg {
      max-width: 200px;
      width: 100%;
      max-height: 160px;
    }

    h4 {
      font-family: $body_text;
      text-transform: uppercase;
      color: $primary_blue;
      padding-top: 50px;
    }

    &:hover h4 {
      color: $primary_orange;
    }
  }
}

p.courses-intro {
  font-family: $body_text;
  color: $grey_text;
  max-width: 700px;
  margin: 2em auto;
}

